Resolves #8 by adding z-index to mobile nav

--- a/src/scss/components/_primary-header.scss
+++ b/src/scss/components/_primary-header.scss
@@ -44,6 +44,7 @@
     display: none;
 }
 
+// On mobile...
 @media (max-width: 700px) {
     .primary-nav {
         display: none;
@@ -56,6 +57,7 @@
         right: 0;
         top: calc(100% - map-get($sizes, 200));
         margin-inline: map-get($sizes, 400);
+        z-index: 1000;
 
         display: flex;
         flex-direction: column;
